Update content and styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,11 @@ html {
 
   font-size: var(--font-size);
   font-family: var(--font);
-  white-space: pre;
+
+  white-space: pre-wrap;
+  word-wrap: break-word;
+
+  over
 
 }
 
