--- a/styles/main.css
+++ b/styles/main.css
@@ -346,3 +346,9 @@ select::msg-expand { display: none }
     --width: 45ch;
   }
 }
+
+@media screen and (max-width: 360px) {
+  html {
+    --width: 40ch;
+  }
+}
